메인메뉴 설정
입력

--- a/index.html
+++ b/index.html
@@ -6,15 +6,92 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/common.css">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css' integrity='sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==' crossorigin='anonymous'/>
     <title>Yes24</title>
 </head>
 <body>
-    <!--바로가기시작-->
-<ul id="skipmenu-list">
+<!--바로가기시작-->
+<ul id="skipmenu_list">
     <li><a href="#" class="hidden">메뉴바로가기</a></li>
     <li><a href="#" class="hidden">상단바로가기</a></li>
     <li><a href="#" class="hidden">하단바로가기</a></li>
 </ul>
-<!--바로가기끝-->  
+<!--바로가기끝-->
+
+<!--헤더-->
+<div id="header_wrap">
+    <header>
+        <section id="header_top">
+            <h1 id="logo">
+                <img src="./images/logo.png" alt="yes24로고">
+            </div>
+            <input type="text" id="search">
+                <button id="search_btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+        </section>
+        <section id="header_bottom">
+            <ul id="mainmenu">
+                <li class="mainmenu_list"><a href="#;">분야별</a>
+                    <div class="sub_wrap">
+                        <h2 id="field_title">국내분야</h2>
+                        <ul id="field">
+                            <li class="field_list"><a href="#;"></a>가정살림</li>
+                            <li class="field_list"><a href="#;"></a>건강취미</li>
+                            <li class="field_list"><a href="#;"></a>경제경영</li>
+                            <li class="field_list"><a href="#;"></a>국어/외국어사전</li>
+                            <li class="field_list"><a href="#;"></a>대학교재</li>
+                            <li class="field_list"><a href="#;"></a>만화/라이트노벨</li>
+                            <li class="field_list"><a href="#;"></a>사회정치</li>
+                            <li class="field_list"><a href="#;"></a>소설/시/희곡</li>
+
+                            <li class="field_list"><a href="#;"></a>수험서 자격증</li>
+                            <li class="field_list"><a href="#;"></a>어린이</li>
+                            <li class="field_list"><a href="#;"></a>에세이</li>
+                            <li class="field_list"><a href="#;"></a>여행</li>
+                            <li class="field_list"><a href="#;"></a>역사</li>
+                            <li class="field_list"><a href="#;"></a>예술</li>
+                            <li class="field_list"><a href="#;"></a>유아</li>
+                            <li class="field_list"><a href="#;"></a>인문</li>
+
+                            <li class="field_list"><a href="#;"></a>인물</li>
+                            <li class="field_list"><a href="#;"></a>자기계발</li>
+                            <li class="field_list"><a href="#;"></a>자연과학</li>
+                            <li class="field_list"><a href="#;"></a>잡지</li>
+                            <li class="field_list"><a href="#;"></a>전집</li>
+                            <li class="field_list"><a href="#;"></a>종교</li>
+                            <li class="field_list"><a href="#;"></a>청소년</li>
+                            <li class="field_list"><a href="#;"></a>IT/모바일</li>
+
+                            <li class="field_list"><a href="#;"></a>초등참고서</li>
+                            <li class="field_list"><a href="#;"></a>중고등참고서</li>
+                        </ul>
+                    </div> 
+                </li>
+                <li class="mainmenu_list"><a href="#">중고샵</a>
+                    <div class="sub_wrap">
+                        <ul class="sub">
+                            <il class="sub_list"><a href="#;">국내도서</a></il>
+                            <il class="sub_list"><a href="#;">외국도서</a></il>
+                            <il class="sub_list"><a href="#;">음반>DVD</a></il>
+                            <il class="sub_list"><a href="#;">바이백</a></il>
+                            <il class="sub_list"><a href="#;">직배송 중고책</a></il>
+                            <il class="sub_list"><a href="#;">중고매장</a></il>
+                        </ul>
+                    </div>
+                </li>
+                <li class="mainmenu_list"><a href="#">북클럽</a></li>
+                <li class="mainmenu_list"><a href="#">바이백</a></li>
+                <li class="mainmenu_list"><a href="#">게시판</a>
+                    <div class="sub_wrap">
+                        <ul class="sub">
+                            <il class="sub_list"><a href="#;">매장안내</a></il>
+                            <il class="sub_list"><a href="#;">이벤트</a></il>
+                            <il class="sub_list"><a href="#;">1:1문의</a></il>
+                            <il class="sub_list"><a href="#;">자주 묻는 질문</a></il>
+                        </ul>
+                    </div></li>
+            </ul>
+        </section>
+    </header>
+</div>
 </body>
 </html>
