--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
     <header>
         <section id="header_top">
             <h1 id="logo">
-                <img src="./images/logo.png" alt="yes24로고">
-            </div>
-            <input type="text" id="search">
-                <button id="search_btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+                <img src="./images/logo.png" alt="yes24로고"></h1>
+            <input type="search" id="search" placeholder="찾으실 책을 입력해 주세요.">
+                <button id="search_btn"><i class="fa-solid fa-magnifying-glass fa-2x"></i></button>
         </section>
         <section id="header_bottom">
             <ul id="mainmenu">
@@ -34,35 +33,35 @@
                     <div class="sub_wrap">
                         <h2 id="field_title">국내분야</h2>
                         <ul id="field">
-                            <li class="field_list"><a href="#;"></a>가정살림</li>
-                            <li class="field_list"><a href="#;"></a>건강취미</li>
-                            <li class="field_list"><a href="#;"></a>경제경영</li>
-                            <li class="field_list"><a href="#;"></a>국어/외국어사전</li>
-                            <li class="field_list"><a href="#;"></a>대학교재</li>
-                            <li class="field_list"><a href="#;"></a>만화/라이트노벨</li>
-                            <li class="field_list"><a href="#;"></a>사회정치</li>
-                            <li class="field_list"><a href="#;"></a>소설/시/희곡</li>
+                            <li class="field_list"><a href="#;">가정살림</a></li>
+                            <li class="field_list"><a href="#;">건강취미</a></li>
+                            <li class="field_list"><a href="#;">경제경영</a></li>
+                            <li class="field_list"><a href="#;">국어/외국어사전</a></li>
+                            <li class="field_list"><a href="#;">대학교재</a></li>
+                            <li class="field_list"><a href="#;">만화/라이트노벨</a></li>
+                            <li class="field_list"><a href="#;">사회정치</a></li>
+                            <li class="field_list"><a href="#;">소설/시/희곡</a></li>
 
-                            <li class="field_list"><a href="#;"></a>수험서 자격증</li>
-                            <li class="field_list"><a href="#;"></a>어린이</li>
-                            <li class="field_list"><a href="#;"></a>에세이</li>
-                            <li class="field_list"><a href="#;"></a>여행</li>
-                            <li class="field_list"><a href="#;"></a>역사</li>
-                            <li class="field_list"><a href="#;"></a>예술</li>
-                            <li class="field_list"><a href="#;"></a>유아</li>
-                            <li class="field_list"><a href="#;"></a>인문</li>
+                            <li class="field_list"><a href="#;">수험서 자격증</a></li>
+                            <li class="field_list"><a href="#;">어린이</a></li>
+                            <li class="field_list"><a href="#;">에세이</a></li>
+                            <li class="field_list"><a href="#;">여행</a></li>
+                            <li class="field_list"><a href="#;">역사</a></li>
+                            <li class="field_list"><a href="#;">예술</a></li>
+                            <li class="field_list"><a href="#;">유아</a></li>
+                            <li class="field_list"><a href="#;">인문</a></li>
 
-                            <li class="field_list"><a href="#;"></a>인물</li>
-                            <li class="field_list"><a href="#;"></a>자기계발</li>
-                            <li class="field_list"><a href="#;"></a>자연과학</li>
-                            <li class="field_list"><a href="#;"></a>잡지</li>
-                            <li class="field_list"><a href="#;"></a>전집</li>
-                            <li class="field_list"><a href="#;"></a>종교</li>
-                            <li class="field_list"><a href="#;"></a>청소년</li>
-                            <li class="field_list"><a href="#;"></a>IT/모바일</li>
+                            <li class="field_list"><a href="#;">인물</a></li>
+                            <li class="field_list"><a href="#;">자기계발</a></li>
+                            <li class="field_list"><a href="#;">자연과학</a></li>
+                            <li class="field_list"><a href="#;">잡지</a></li>
+                            <li class="field_list"><a href="#;">전집</a></li>
+                            <li class="field_list"><a href="#;">종교</a></li>
+                            <li class="field_list"><a href="#;">청소년</a></li>
+                            <li class="field_list"><a href="#;">IT/모바일</a></li>
 
-                            <li class="field_list"><a href="#;"></a>초등참고서</li>
-                            <li class="field_list"><a href="#;"></a>중고등참고서</li>
+                            <li class="field_list"><a href="#;">초등참고서</a></li>
+                            <li class="field_list"><a href="#;">중고등참고서</a></li>
                         </ul>
                     </div> 
                 </li>
@@ -71,7 +70,7 @@
                         <ul class="sub">
                             <il class="sub_list"><a href="#;">국내도서</a></il>
                             <il class="sub_list"><a href="#;">외국도서</a></il>
-                            <il class="sub_list"><a href="#;">음반>DVD</a></il>
+                            <il class="sub_list"><a href="#;">음반/DVD</a></il>
                             <il class="sub_list"><a href="#;">바이백</a></il>
                             <il class="sub_list"><a href="#;">직배송 중고책</a></il>
                             <il class="sub_list"><a href="#;">중고매장</a></il>
@@ -88,10 +87,13 @@
                             <il class="sub_list"><a href="#;">1:1문의</a></il>
                             <il class="sub_list"><a href="#;">자주 묻는 질문</a></il>
                         </ul>
-                    </div></li>
+                    </div>
+                </li>
             </ul>
         </section>
     </header>
 </div>
+
+<!--헤더끝-->
 </body>
 </html>
