--- a/index.html
+++ b/index.html
@@ -32,36 +32,36 @@
                 <li class="mainmenu_list"><a href="#;">분야별</a>
                     <div class="sub_wrap">
                         <h2 id="field_title">국내분야</h2>
-                        <ul id="field">
-                            <li class="field_list"><a href="#;">가정살림</a></li>
-                            <li class="field_list"><a href="#;">건강취미</a></li>
-                            <li class="field_list"><a href="#;">경제경영</a></li>
-                            <li class="field_list"><a href="#;">국어/외국어사전</a></li>
-                            <li class="field_list"><a href="#;">대학교재</a></li>
-                            <li class="field_list"><a href="#;">만화/라이트노벨</a></li>
-                            <li class="field_list"><a href="#;">사회정치</a></li>
-                            <li class="field_list"><a href="#;">소설/시/희곡</a></li>
+                        <ul class="sub">
+                            <li class="sub_list"><a href="#;">가정살림</a></li>
+                            <li class="sub_list"><a href="#;">건강취미</a></li>
+                            <li class="sub_list"><a href="#;">경제경영</a></li>
+                            <li class="sub_list"><a href="#;">국어/외국어사전</a></li>
+                            <li class="sub_list"><a href="#;">대학교재</a></li>
+                            <li class="sub_list"><a href="#;">만화/라이트노벨</a></li>
+                            <li class="sub_list"><a href="#;">사회정치</a></li>
+                            <li class="sub_list"><a href="#;">소설/시/희곡</a></li>
 
-                            <li class="field_list"><a href="#;">수험서 자격증</a></li>
-                            <li class="field_list"><a href="#;">어린이</a></li>
-                            <li class="field_list"><a href="#;">에세이</a></li>
-                            <li class="field_list"><a href="#;">여행</a></li>
-                            <li class="field_list"><a href="#;">역사</a></li>
-                            <li class="field_list"><a href="#;">예술</a></li>
-                            <li class="field_list"><a href="#;">유아</a></li>
-                            <li class="field_list"><a href="#;">인문</a></li>
+                            <li class="sub_list"><a href="#;">수험서 자격증</a></li>
+                            <li class="sub_list"><a href="#;">어린이</a></li>
+                            <li class="sub_list"><a href="#;">에세이</a></li>
+                            <li class="sub_list"><a href="#;">여행</a></li>
+                            <li class="sub_list"><a href="#;">역사</a></li>
+                            <li class="sub_list"><a href="#;">예술</a></li>
+                            <li class="sub_list"><a href="#;">유아</a></li>
+                            <li class="sub_list"><a href="#;">인문</a></li>
 
-                            <li class="field_list"><a href="#;">인물</a></li>
-                            <li class="field_list"><a href="#;">자기계발</a></li>
-                            <li class="field_list"><a href="#;">자연과학</a></li>
-                            <li class="field_list"><a href="#;">잡지</a></li>
-                            <li class="field_list"><a href="#;">전집</a></li>
-                            <li class="field_list"><a href="#;">종교</a></li>
-                            <li class="field_list"><a href="#;">청소년</a></li>
-                            <li class="field_list"><a href="#;">IT/모바일</a></li>
+                            <li class="sub_list"><a href="#;">인물</a></li>
+                            <li class="sub_list"><a href="#;">자기계발</a></li>
+                            <li class="sub_list"><a href="#;">자연과학</a></li>
+                            <li class="sub_list"><a href="#;">잡지</a></li>
+                            <li class="sub_list"><a href="#;">전집</a></li>
+                            <li class="sub_list"><a href="#;">종교</a></li>
+                            <li class="sub_list"><a href="#;">청소년</a></li>
+                            <li class="sub_list"><a href="#;">IT/모바일</a></li>
 
-                            <li class="field_list"><a href="#;">초등참고서</a></li>
-                            <li class="field_list"><a href="#;">중고등참고서</a></li>
+                            <li class="sub_list"><a href="#;">초등참고서</a></li>
+                            <li class="sub_list"><a href="#;">중고등참고서</a></li>
                         </ul>
                     </div> 
                 </li>
