--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                             <li class="sub_list"><a href="#;">만화/라이트노벨</a></li>
                             <li class="sub_list"><a href="#;">사회정치</a></li>
                             <li class="sub_list"><a href="#;">소설/시/희곡</a></li>
+                        </ul>
 
+                        <ul class="sub">
                             <li class="sub_list"><a href="#;">수험서 자격증</a></li>
                             <li class="sub_list"><a href="#;">어린이</a></li>
                             <li class="sub_list"><a href="#;">에세이</a></li>
@@ -50,7 +52,9 @@
                             <li class="sub_list"><a href="#;">예술</a></li>
                             <li class="sub_list"><a href="#;">유아</a></li>
                             <li class="sub_list"><a href="#;">인문</a></li>
+                        </ul>
 
+                        <ul class="sub">
                             <li class="sub_list"><a href="#;">인물</a></li>
                             <li class="sub_list"><a href="#;">자기계발</a></li>
                             <li class="sub_list"><a href="#;">자연과학</a></li>
@@ -59,14 +63,16 @@
                             <li class="sub_list"><a href="#;">종교</a></li>
                             <li class="sub_list"><a href="#;">청소년</a></li>
                             <li class="sub_list"><a href="#;">IT/모바일</a></li>
+                        </ul>
 
+                        <ul class="sub">
                             <li class="sub_list"><a href="#;">초등참고서</a></li>
                             <li class="sub_list"><a href="#;">중고등참고서</a></li>
                         </ul>
                     </div> 
                 </li>
                 <li class="mainmenu_list"><a href="#">중고샵</a>
-                    <div class="sub_wrap">
+                    <!-- <div class="sub_wrap">
                         <ul class="sub">
                             <il class="sub_list"><a href="#;">국내도서</a></il>
                             <il class="sub_list"><a href="#;">외국도서</a></il>
@@ -75,19 +81,19 @@
                             <il class="sub_list"><a href="#;">직배송 중고책</a></il>
                             <il class="sub_list"><a href="#;">중고매장</a></il>
                         </ul>
-                    </div>
+                    </div> -->
                 </li>
                 <li class="mainmenu_list"><a href="#">북클럽</a></li>
                 <li class="mainmenu_list"><a href="#">바이백</a></li>
                 <li class="mainmenu_list"><a href="#">게시판</a>
-                    <div class="sub_wrap">
+                    <!-- <div class="sub_wrap">
                         <ul class="sub">
                             <il class="sub_list"><a href="#;">매장안내</a></il>
                             <il class="sub_list"><a href="#;">이벤트</a></il>
                             <il class="sub_list"><a href="#;">1:1문의</a></il>
                             <il class="sub_list"><a href="#;">자주 묻는 질문</a></il>
                         </ul>
-                    </div>
+                    </div> -->
                 </li>
             </ul>
         </section>
