--- a/index.html
+++ b/index.html
@@ -31,7 +31,19 @@
             <ul id="mainmenu">
                 <li class="mainmenu_list"><a href="#;">분야별</a>
                     <div class="sub_wrap">
-                        <h2 id="field_title">국내분야</h2>
+                        <div id="sub_list_wrap_title">
+                            <ul class="sub">
+                                <li class="sub_list"><a href="#;">국내도서</a></li>
+                                <li class="sub_list"><a href="#;">외국도서</a></li>
+                                <li class="sub_list"><a href="#;">ebook</a></li>
+                                <li class="sub_list"><a href="#;">웹소설/코믹</a></li>
+                                <li class="sub_list"><a href="#;">CD/LP</a></li>
+                                <li class="sub_list"><a href="#;">DVD/Blu-ray</a></li>
+                                <li class="sub_list"><a href="#;">티켓</a></li>
+                                <li class="sub_list"><a href="#;">문구</a></li>
+                                <li class="sub_list"><a href="#;">중고샵</a></li>
+                            </ul>
+                        </div>
                         <div class="sub_list_wrap">
                             <ul class="sub">
                                 <li class="sub_list"><a href="#;">가정살림</a></li>
