--- a/index.html
+++ b/index.html
@@ -33,9 +33,117 @@
                     <div class="sub_wrap">
                         <div id="sub_list_wrap_title">
                             <ul class="sub">
-                                <li class="sub_list"><a href="#;">국내도서</a></li>
-                                <li class="sub_list"><a href="#;">외국도서</a></li>
-                                <li class="sub_list"><a href="#;">ebook</a></li>
+                                <li class="sub_list"><a href="#;">국내도서</a>
+                                    <div hidden class="sub_all_list_wrap one">
+                                        <div class="sub_list_wrap">
+                                            <ul class="sub">
+                                                <li class="sub_list"><a href="#;">가정살림</a></li>
+                                                <li class="sub_list"><a href="#;">건강취미</a></li>
+                                                <li class="sub_list"><a href="#;">경제경영</a></li>
+                                                <li class="sub_list"><a href="#;">국어/외국어사전</a></li>
+                                                <li class="sub_list"><a href="#;">대학교재</a></li>
+                                                <li class="sub_list"><a href="#;">만화/라이트노벨</a></li>
+                                                <li class="sub_list"><a href="#;">사회정치</a></li>
+                                                <li class="sub_list"><a href="#;">소설/시/희곡</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="sub_list_wrap">
+                                            <ul class="sub">
+                                                <li class="sub_list"><a href="#;">수험서 자격증</a></li>
+                                                <li class="sub_list"><a href="#;">어린이</a></li>
+                                                <li class="sub_list"><a href="#;">에세이</a></li>
+                                                <li class="sub_list"><a href="#;">여행</a></li>
+                                                <li class="sub_list"><a href="#;">역사</a></li>
+                                                <li class="sub_list"><a href="#;">예술</a></li>
+                                                <li class="sub_list"><a href="#;">유아</a></li>
+                                                <li class="sub_list"><a href="#;">인문</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="sub_list_wrap">
+                                            <ul class="sub">
+                                                <li class="sub_list"><a href="#;">인물</a></li>
+                                                <li class="sub_list"><a href="#;">자기계발</a></li>
+                                                <li class="sub_list"><a href="#;">자연과학</a></li>
+                                                <li class="sub_list"><a href="#;">잡지</a></li>
+                                                <li class="sub_list"><a href="#;">전집</a></li>
+                                                <li class="sub_list"><a href="#;">종교</a></li>
+                                                <li class="sub_list"><a href="#;">청소년</a></li>
+                                                <li class="sub_list"><a href="#;">IT/모바일</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="sub_list_wrap">
+                                            <ul class="sub">
+                                                <li class="sub_list"><a href="#;">초등참고서</a></li>
+                                                <li class="sub_list"><a href="#;">중고등참고서</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="sub_list"><a href="#;">외국도서</a>
+                                    <div class="sub_all_list_wrap two">
+                                        <div class="sub_list_wrap">
+                                            <ul class="sub">
+                                                <li class="sub_list"><a href="#;">문학소설</a></li>
+                                                <li class="sub_list"><a href="#;">경제경영</a></li>
+                                                <li class="sub_list"><a href="#;">인문사회</a></li>
+                                                <li class="sub_list"><a href="#;">예술 대중문화</a></li>
+                                                <li class="sub_list"><a href="#;">취미/라이프스타일</a></li>
+                                                <li class="sub_list"><a href="#;">컴퓨터</a></li>
+                                                <li class="sub_list"><a href="#;">자연과학</a></li>
+                                                <li class="sub_list"><a href="#;">대학교재 전문서</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="sub_list_wrap">
+                                            <ul class="sub">
+                                                <li class="sub_list"><a href="#;">해외잡지</a></li>
+                                                <li class="sub_list"><a href="#;">유아/어린이/청소년</a></li>
+                                                <li class="sub_list"><a href="#;">캐릭터북</a></li>
+                                                <li class="sub_list"><a href="#;">초등코스북</a></li>
+                                                <li class="sub_list"><a href="#;">학습서</a></li>
+                                                <li class="sub_list"><a href="#;">일본도서</a></li>
+                                                <li class="sub_list"><a href="#;">중국도서</a></li>
+                                                <li class="sub_list"><a href="#;">프랑스도서</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="sub_list_wrap">
+                                            <ul class="sub">
+                                                <li class="sub_list"><a href="#;">Lexile®</a></li>
+                                            </ul>
+                                        </div>
+                                    </div></li>
+                                <li class="sub_list"><a href="#;">ebook</a>
+                                    <div class="sub_all_list_wrap three">
+                                        <h2 class="sub_title first_sub_title">장르소설</h2>
+                                        <div class="sub_list_wrap">
+                                            <ul class="sub">
+                                                <li class="sub_list"><a href="#;">문학소설</a></li>
+                                                <li class="sub_list"><a href="#;">경제경영</a></li>
+                                                <li class="sub_list"><a href="#;">인문사회</a></li>
+                                                <li class="sub_list"><a href="#;">예술 대중문화</a></li>
+                                                <li class="sub_list"><a href="#;">취미/라이프스타일</a></li>
+                                                <li class="sub_list"><a href="#;">컴퓨터</a></li>
+                                                <li class="sub_list"><a href="#;">자연과학</a></li>
+                                                <li class="sub_list"><a href="#;">대학교재 전문서</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="sub_list_wrap">
+                                            <ul class="sub">
+                                                <li class="sub_list"><a href="#;">해외잡지</a></li>
+                                                <li class="sub_list"><a href="#;">유아/어린이/청소년</a></li>
+                                                <li class="sub_list"><a href="#;">캐릭터북</a></li>
+                                                <li class="sub_list"><a href="#;">초등코스북</a></li>
+                                                <li class="sub_list"><a href="#;">학습서</a></li>
+                                                <li class="sub_list"><a href="#;">일본도서</a></li>
+                                                <li class="sub_list"><a href="#;">중국도서</a></li>
+                                                <li class="sub_list"><a href="#;">프랑스도서</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="sub_list_wrap">
+                                            <ul class="sub">
+                                                <li class="sub_list"><a href="#;">Lexile®</a></li>
+                                            </ul>
+                                        </div>
+                                    </li>
                                 <li class="sub_list"><a href="#;">웹소설/코믹</a></li>
                                 <li class="sub_list"><a href="#;">CD/LP</a></li>
                                 <li class="sub_list"><a href="#;">DVD/Blu-ray</a></li>
@@ -44,7 +152,7 @@
                                 <li class="sub_list"><a href="#;">중고샵</a></li>
                             </ul>
                         </div>
-                        <div class="sub_list_wrap">
+                        <!-- <div class="sub_list_wrap">
                             <ul class="sub">
                                 <li class="sub_list"><a href="#;">가정살림</a></li>
                                 <li class="sub_list"><a href="#;">건강취미</a></li>
@@ -89,7 +197,7 @@
                                 <li class="sub_list"><a href="#;">중고등참고서</a></li>
                             </ul>
                         </div>
-                    </div> 
+                    </div>  -->
                 </li>
                 <li class="mainmenu_list"><a href="#">중고샵</a>
                     <!-- <div class="sub_wrap">
