--- a/index.html
+++ b/index.html
@@ -112,92 +112,174 @@
                                         </div>
                                     </div></li>
                                 <li class="sub_list"><a href="#;">ebook</a>
-                                    <div class="sub_all_list_wrap three">
+                                    <div class="sub_all_list_wrap four">
                                         <h2 class="sub_title first_sub_title">장르소설</h2>
                                         <div class="sub_list_wrap">
                                             <ul class="sub">
-                                                <li class="sub_list"><a href="#;">문학소설</a></li>
+                                                <li class="sub_list"><a href="#;">로맨스</a></li>
+                                                <li class="sub_list"><a href="#;">BL</a></li>
+                                                <li class="sub_list"><a href="#;">판타지/무협</a></li>
+                                            </ul>
+                                        </div>
+                                        <h2 class="sub_title second_sub_title">단행본</h2>
+                                        <div class="sub_list_wrap">
+                                            <ul class="sub">
+                                                <li class="sub_list"><a href="#;">소설/에세이 시</a></li>
                                                 <li class="sub_list"><a href="#;">경제경영</a></li>
-                                                <li class="sub_list"><a href="#;">인문사회</a></li>
-                                                <li class="sub_list"><a href="#;">예술 대중문화</a></li>
-                                                <li class="sub_list"><a href="#;">취미/라이프스타일</a></li>
-                                                <li class="sub_list"><a href="#;">컴퓨터</a></li>
+                                                <li class="sub_list"><a href="#;">자기계발</a></li>
+                                                <li class="sub_list"><a href="#;">인문/사회정치</a></li>
+                                                <li class="sub_list"><a href="#;">역사/종교</a></li>
+                                                <li class="sub_list"><a href="#;">만화</a></li>
                                                 <li class="sub_list"><a href="#;">자연과학</a></li>
-                                                <li class="sub_list"><a href="#;">대학교재 전문서</a></li>
+                                                <li class="sub_list"><a href="#;">외국어</a></li>
                                             </ul>
                                         </div>
                                         <div class="sub_list_wrap">
                                             <ul class="sub">
-                                                <li class="sub_list"><a href="#;">해외잡지</a></li>
-                                                <li class="sub_list"><a href="#;">유아/어린이/청소년</a></li>
-                                                <li class="sub_list"><a href="#;">캐릭터북</a></li>
-                                                <li class="sub_list"><a href="#;">초등코스북</a></li>
-                                                <li class="sub_list"><a href="#;">학습서</a></li>
-                                                <li class="sub_list"><a href="#;">일본도서</a></li>
-                                                <li class="sub_list"><a href="#;">중국도서</a></li>
-                                                <li class="sub_list"><a href="#;">프랑스도서</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="sub_list_wrap">
-                                            <ul class="sub">
-                                                <li class="sub_list"><a href="#;">Lexile®</a></li>
+                                                <li class="sub_list"><a href="#;">IT/모바일</a></li>
+                                                <li class="sub_list"><a href="#;">가정살림/건강취미</a></li>
+                                                <li class="sub_list"><a href="#;">해외원서</a></li>
+                                                <li class="sub_list"><a href="#;">오디오북</a></li>
                                             </ul>
                                         </div>
                                     </li>
-                                <li class="sub_list"><a href="#;">웹소설/코믹</a></li>
-                                <li class="sub_list"><a href="#;">CD/LP</a></li>
-                                <li class="sub_list"><a href="#;">DVD/Blu-ray</a></li>
-                                <li class="sub_list"><a href="#;">티켓</a></li>
-                                <li class="sub_list"><a href="#;">문구</a></li>
-                                <li class="sub_list"><a href="#;">중고샵</a></li>
+                                <li class="sub_list"><a href="#;">웹소설/코믹</a>
+                                    <div class="sub_all_list_wrap three">
+                                        <h2 class="sub_title first_sub_title">웹소설</h2>
+                                        <div class="sub_list_wrap">
+                                            <ul class="sub">
+                                                <li class="sub_list"><a href="#;">로맨스</a></li>
+                                                <li class="sub_list"><a href="#;">로판</a></li>
+                                                <li class="sub_list"><a href="#;">판타지</a></li>
+                                                <li class="sub_list"><a href="#;">무협</a></li>
+                                                <li class="sub_list"><a href="#;">라이트노벨</a></li>
+                                                <li class="sub_list"><a href="#;">BL</a></li>
+                                            </ul>
+                                        </div>
+                                        <h2 class="sub_title second_sub_title">웹툰/만화</h2>
+                                            <div class="sub_list_wrap">
+                                                <ul class="sub">
+                                                    <li class="sub_list"><a href="#;">순정</a></li>
+                                                    <li class="sub_list"><a href="#;">소녀</a></li>
+                                                    <li class="sub_list"><a href="#;">드라마</a></li>
+                                                    <li class="sub_list"><a href="#;">액션</a></li>
+                                                    <li class="sub_list"><a href="#;">bL</a></li>
+                                                </ul>
+                                            </div>
+                                        </li>
+                                <li class="sub_list"><a href="#;">CD/LP</a>
+                                    <div hidden class="sub_all_list_wrap five">
+                                        <div class="sub_list_wrap">
+                                            <ul class="sub">
+                                                <li class="sub_list"><a href="#;">가요</a></li>
+                                                <li class="sub_list"><a href="#;">클래식</a></li>
+                                                <li class="sub_list"><a href="#;">POP</a></li>
+                                                <li class="sub_list"><a href="#;">ROCK</a></li>
+                                                <li class="sub_list"><a href="#;">재즈</a></li>
+                                                <li class="sub_list"><a href="#;">OST</a></li>
+                                                <li class="sub_list"><a href="#;">뮤직DVD</a></li>
+                                                <li class="sub_list"><a href="#;">유아/어린이/영상</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="sub_list_wrap">
+                                            <ul class="sub">
+                                                <li class="sub_list"><a href="#;">뉴에이지</a></li>
+                                                <li class="sub_list"><a href="#;">종교음악</a></li>
+                                                <li class="sub_list"><a href="#;">국악</a></li>
+                                                <li class="sub_list"><a href="#;">일본음악</a></li>
+                                                <li class="sub_list"><a href="#;">월드뮤직</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                <li class="sub_list"><a href="#;">DVD/Blu-ray</a>
+                                    <div hidden class="sub_all_list_wrap six">
+                                        <div class="sub_list_wrap">
+                                            <ul class="sub">
+                                                <li class="sub_list"><a href="#;">예약판매</a></li>
+                                                <li class="sub_list"><a href="#;">할인행사</a></li>
+                                                <li class="sub_list"><a href="#;">블루레이</a></li>
+                                                <li class="sub_list"><a href="#;">애니메이션</a></li>
+                                                <li class="sub_list"><a href="#;">액션/SF</a></li>
+                                                <li class="sub_list"><a href="#;">드라마/코미디</a></li>
+                                                <li class="sub_list"><a href="#;">고전/영화</a></li>
+                                                <li class="sub_list"><a href="#;">3D블루레이</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="sub_list_wrap">
+                                            <ul class="sub">
+                                                <li class="sub_list"><a href="#;">다큐/교육</a></li>
+                                                <li class="sub_list"><a href="#;">성인(19)</a></li>
+                                                <li class="sub_list"><a href="#;">뮤직DVD</a></li>
+                                                <li class="sub_list"><a href="#;">국내외TV드라마</a></li>
+                                                <li class="sub_list"><a href="#;">닌텐도/게임</a></li>
+                                                <li class="sub_list"><a href="#;">비디오/VCD</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="sub_list"><a href="#;">티켓</a>
+                                    <div hidden class="sub_all_list_wrap seven">
+                                        <div class="sub_list_wrap">
+                                            <ul class="sub">
+                                                <li class="sub_list"><a href="#;">콘서트</a></li>
+                                                <li class="sub_list"><a href="#;">뮤지컬</a></li>
+                                                <li class="sub_list"><a href="#;">연극</a></li>
+                                                <li class="sub_list"><a href="#;">클래식/무용/국악</a></li>
+                                                <li class="sub_list"><a href="#;">전시/행사</a></li>
+                                                <li class="sub_list"><a href="#;">가족/아동</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="sub_list"><a href="#;">문구</a>
+                                    <div hidden class="sub_all_list_wrap eight">
+                                        <div class="sub_list_wrap">
+                                            <ul class="sub">
+                                                <li class="sub_list"><a href="#;">예스굿즈</a></li>
+                                                <li class="sub_list"><a href="#;">디자인문구</a></li>
+                                                <li class="sub_list"><a href="#;">학습/독서</a></li>
+                                                <li class="sub_list"><a href="#;">디지털</a></li>
+                                                <li class="sub_list"><a href="#;">리빙</a></li>
+                                                <li class="sub_list"><a href="#;">취미/여행</a></li>
+                                                <li class="sub_list"><a href="#;">유아동</a></li>
+                                                <li class="sub_list"><a href="#;">패션잡화</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="sub_list_wrap">
+                                            <ul class="sub">
+                                                <li class="sub_list"><a href="#;">반려동물</a></li>
+                                                <li class="sub_list"><a href="#;">1인샵</a></li>
+                                            </ul>
+                                        </div>
+                                    </div></li>
+                                <li class="sub_list"><a href="#;">중고샵</a>
+                                    <div hidden class="sub_all_list_wrap nine">
+                                        <div class="sub_list_wrap">
+                                            <ul class="sub">
+                                                <li class="sub_list"><a href="#;">가정과 생활</a></li>
+                                                <li class="sub_list"><a href="#;">국어/외국어</a></li>
+                                                <li class="sub_list"><a href="#;">대학교재</a></li>
+                                                <li class="sub_list"><a href="#;">소설/시</a></li>
+                                                <li class="sub_list"><a href="#;">만화</a></li>
+                                                <li class="sub_list"><a href="#;">비즈니스와 경제</a></li>
+                                                <li class="sub_list"><a href="#;">자기관리</a></li>
+                                                <li class="sub_list"><a href="#;">어린이</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="sub_list_wrap">
+                                            <ul class="sub">
+                                                <li class="sub_list"><a href="#;">유아</a></li>
+                                                <li class="sub_list"><a href="#;">인문</a></li>
+                                                <li class="sub_list"><a href="#;">전집</a></li>
+                                                <li class="sub_list"><a href="#;">중고등참고서</a></li>
+                                                <li class="sub_list"><a href="#;">초등참고서</a></li>
+                                                <li class="sub_list"><a href="#;">외국도서</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </li>
                             </ul>
                         </div>
-                        <!-- <div class="sub_list_wrap">
-                            <ul class="sub">
-                                <li class="sub_list"><a href="#;">가정살림</a></li>
-                                <li class="sub_list"><a href="#;">건강취미</a></li>
-                                <li class="sub_list"><a href="#;">경제경영</a></li>
-                                <li class="sub_list"><a href="#;">국어/외국어사전</a></li>
-                                <li class="sub_list"><a href="#;">대학교재</a></li>
-                                <li class="sub_list"><a href="#;">만화/라이트노벨</a></li>
-                                <li class="sub_list"><a href="#;">사회정치</a></li>
-                                <li class="sub_list"><a href="#;">소설/시/희곡</a></li>
-                            </ul>
-                        </div>
-
-                        <div class="sub_list_wrap">
-                            <ul class="sub">
-                                <li class="sub_list"><a href="#;">수험서 자격증</a></li>
-                                <li class="sub_list"><a href="#;">어린이</a></li>
-                                <li class="sub_list"><a href="#;">에세이</a></li>
-                                <li class="sub_list"><a href="#;">여행</a></li>
-                                <li class="sub_list"><a href="#;">역사</a></li>
-                                <li class="sub_list"><a href="#;">예술</a></li>
-                                <li class="sub_list"><a href="#;">유아</a></li>
-                                <li class="sub_list"><a href="#;">인문</a></li>
-                            </ul>
-                        </div>
-
-                        <div class="sub_list_wrap">
-                            <ul class="sub">
-                                <li class="sub_list"><a href="#;">인물</a></li>
-                                <li class="sub_list"><a href="#;">자기계발</a></li>
-                                <li class="sub_list"><a href="#;">자연과학</a></li>
-                                <li class="sub_list"><a href="#;">잡지</a></li>
-                                <li class="sub_list"><a href="#;">전집</a></li>
-                                <li class="sub_list"><a href="#;">종교</a></li>
-                                <li class="sub_list"><a href="#;">청소년</a></li>
-                                <li class="sub_list"><a href="#;">IT/모바일</a></li>
-                            </ul>
-                        </div>
-
-                        <div class="sub_list_wrap">
-                            <ul class="sub">
-                                <li class="sub_list"><a href="#;">초등참고서</a></li>
-                                <li class="sub_list"><a href="#;">중고등참고서</a></li>
-                            </ul>
-                        </div>
-                    </div>  -->
                 </li>
                 <li class="mainmenu_list"><a href="#">중고샵</a>
                     <!-- <div class="sub_wrap">
